set(LIBRARY_FILES cyan.hpp cyan.cpp parse.cpp parse.hpp symbols.cpp symbols.hpp location.hpp type.hpp type.cpp error_collector.cpp error_collector.hpp instruction.cpp instruction.hpp ir.cpp ir.hpp ir_builder.cpp ir_builder.hpp codegen.hpp codegen_x64.cpp codegen_x64.hpp codegen.cpp inliner.cpp dep_analyzer.cpp dep_analyzer.hpp mem2reg.cpp mem2reg.hpp loop_marker.cpp loop_marker.hpp inst_rewriter.cpp inst_rewriter.hpp phi_eliminator.cpp phi_eliminator.hpp dead_code_eliminater.cpp dead_code_eliminater.hpp unreachable_code_eliminater.cpp unreachable_code_eliminater.hpp optimizer_group.cpp optimizer_group.hpp)
add_library(cyan ${LIBRARY_FILES})
